Fixed spacing issue with text in index.html

--- a/css/styles-dark.css
+++ b/css/styles-dark.css
@@ -181,8 +181,12 @@ nav #discord {
   }
 }
 
-header {
-  padding-top: 120px;
+.ambitions {
+  padding-top: 130px;
+}
+
+.ambitions-text {
+  padding-bottom: 15px;
 }
 
 .support {
